Changes for RTC 5.0/Plugin release 1.1.0.
See
https://wiki.jenkins-ci.org/display/JENKINS/Team+Concert+Plugin#TeamConcertPlugin-Changelog
for details.